mobile nav bar scrolling fix, logo cropping fix

--- a/docs/.vuepress/theme/styles/navbar.scss
+++ b/docs/.vuepress/theme/styles/navbar.scss
@@ -73,6 +73,10 @@ $navbar-horizontal-padding: 1.5rem;
     top: $navbar-vertical-padding;
     display: flex;
 
+    @media (max-width: $MQMobile) {
+      padding-left: 0;
+    }
+
     .search-box {
       flex: 0 0 auto;
       vertical-align: top;
